# Quad_Racer

./: CMakeLists.txt  README.md  package.xml
launch/: quad_racer_flightgoggles.launch  quad_teleop.launch  reporter.launch  scorer.launch
scripts/: publish.py  subscribe.py  visualize.py
src/: chess.py  image_listener.cpp  quad_racer.cpp
